--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -25,9 +25,9 @@
                 {{ form_widget(form._token) }}
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <label class="">{{ form_label(form.maker) }}</label>
-                        {{ form_errors(form.maker) }}
-                        {{ form_widget(form.maker, {'attr': {'class': 'select'}}) }}
+                        <label class="">{{ form_label(form.customer_role) }}</label>
+                        {{ form_errors(form.customer_role) }}
+                        {{ form_widget(form.customer_role, {'attr': {'class': 'select'}}) }}
                     </div>
                 </div>
 
@@ -38,9 +38,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="margin-left13">{{ form_label(form.name) }}</label>
-                    {{ form_errors(form.name) }}
-                    {{ form_widget(form.name, {'attr': {'class': 'width-full', 'placeholder' : '野菜太郎'}}) }}
+                    <label class="margin-left13">{{ form_label(form.name01) }}</label>
+                    {{ form_errors(form.name01) }}
+                    {{ form_widget(form.name01, {'attr': {'class': 'width-full', 'placeholder' : '野菜太郎'}}) }}
                 </div>
 
                 <div class="form-group">
@@ -58,13 +58,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="margin-left13">{{ form_label(form.addr02) }}</label>
-                    {{ form_errors(form.addr02) }}
-                    {{ form_widget(form.addr02, {'attr': {'class': 'width-full', 'placeholder': '123456789'}}) }}
+                    <label class="margin-left13">{{ form_label(form.tel01) }}</label>
+                    {{ form_errors(form.tel01) }}
+                    {{ form_widget(form.tel01, {'attr': {'class': 'width-full', 'placeholder': '123456789'}}) }}
                 </div>
 
                 {% for emailField in form.email %}
-                    <label class="margin-left13">{{ form_label(emailField) }}</label>
+                    <label class="margin-left13">{{ form_label(form.email) }}{% if loop.last %}（確認用）{% endif %}</label>
                     <div class="form-group {% if emailField.vars.errors is not empty %}has-error{% endif %}">
                         {{ form_errors(emailField) }}
                         {{ form_widget(emailField, { type : 'email', 'attr': {'class': 'width-full'}}) }}
