Add admin customer search function ( search role + bus stop)

--- a/src/Eccube/Resource/template/admin/Customer/index.twig
+++ b/src/Eccube/Resource/template/admin/Customer/index.twig
@@ -208,6 +208,21 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {{ form_widget(searchForm.last_buy_start, {'attr': {'class': 'input_cal'}}) }} ～ {{ form_widget(searchForm.last_buy_end, {'attr': {'class': 'input_cal'}}) }}
               </div>
             </div>
+
+            <div class="col-xs-12 col-md-6">
+                <div id="search_box_main__customer_role" class="form-group">
+                    {{ form_label(searchForm.customer_role) }}
+                    {{ form_widget(searchForm.customer_role) }}
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-6">
+                <div id="search_box_main__bus_stop" class="form-group">
+                    {{ form_label(searchForm.bus_stop) }}
+                    {{ form_widget(searchForm.bus_stop) }}
+                </div>
+            </div>
+
                 <div class="extra-form col-xs-12 col-sm-12">
                     {% for f in searchForm.getIterator %}
                         {% if f.vars.name matches '[^plg*]' %}
