--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -11,7 +11,6 @@
 {% endblock %}
 {% block main %}
     <div class="wrapper" id="service-regist-receiver-wrapper">
-
         <div class="farmer-header">
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
         </div>
@@ -24,11 +23,9 @@
                 <input type="hidden" name="mode" value="register"/>
                 {{ form_widget(form._token) }}
                 <div class="form-group">
-                    <div class="col-xs-12">
-                        <label class="">{{ form_label(form.customer_role) }}</label>
-                        {{ form_errors(form.customer_role) }}
-                        {{ form_widget(form.customer_role, {'attr': {'class': 'select'}}) }}
-                    </div>
+                    <label class="margin-left13">{{ form_label(form.customer_role) }}</label>
+                    {{ form_errors(form.customer_role) }}
+                    {{ form_widget(form.customer_role, {'attr': {'class': 'select margin-left13'}}) }}
                 </div>
 
                 <div class="form-group">
