--- a/src/Eccube/Resource/template/admin/Customer/index.twig
+++ b/src/Eccube/Resource/template/admin/Customer/index.twig
@@ -211,12 +211,12 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
             <div class="col-xs-12 col-md-6">
                 <div id="search_box_main__customer_role" class="form-group">
-                    {{ form_label(searchForm.customer_role) }}
+                    <label>{{ searchForm.customer_role.vars.label }}</label>
                     {{ form_widget(searchForm.customer_role) }}
                 </div>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6" style="display: none;">
                 <div id="search_box_main__bus_stop" class="form-group">
                     {{ form_label(searchForm.bus_stop) }}
                     {{ form_widget(searchForm.bus_stop) }}
