--- a/src/Eccube/Resource/template/default/Farm/service_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_profile.twig
@@ -81,11 +81,11 @@
                     <span class="profile-address-medium">{{ Customer.addr01 }}</span>
                 </div>
 
-                <div class="col-lg-12 col-sm-12">
+                <div>
                     {{ form_errors(form.note) }}
                     {{ form_widget(form.note, {'attr': {'class': 'color888', 'placeholder': '紹介文を入力...100文字'}}) }}
                 </div>
-                <button type="submit" class="btn btn-inactive margin-left13">やさいバスの利用をはじめる</button>
+                <button type="submit" class="btn btn-inactive">やさいバスの利用をはじめる</button>
             </form>
         </div>
     </div>
