--- a/src/Eccube/Resource/template/default/default_frame.twig
+++ b/src/Eccube/Resource/template/default/default_frame.twig
@@ -22,47 +22,47 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{ BaseInfo.shop_name }}{% if subtitle is defined and subtitle is not empty %} / {{ subtitle }}{% elseif title is defined and title is not empty %} / {{ title }}{% endif %}</title>
-{% if PageLayout.author is not empty %}
-    <meta name="author" content="{{ PageLayout.author }}">
-{% endif %}
-{% if PageLayout.description is not empty %}
-    <meta name="description" content="{{ PageLayout.description }}">
-{% endif %}
-{% if PageLayout.keyword is not empty %}
-    <meta name="keywords" content="{{ PageLayout.keyword }}">
-{% endif %}
-{% if PageLayout.meta_robots is not empty %}
-    <meta name="robots" content="{{ PageLayout.meta_robots }}">
-{% endif %}
-<meta name="viewport" content="width=device-width, initial-scale=1">
-{% if PageLayout.meta_tags is not empty %}
-    {{ PageLayout.meta_tags|raw }}
-{% endif %}
-{% block meta_tags %}{% endblock %}
-<link rel="icon" href="{{ app.config.front_urlpath }}/img/common/favicon.ico">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{{ BaseInfo.shop_name }}{% if subtitle is defined and subtitle is not empty %} / {{ subtitle }}{% elseif title is defined and title is not empty %} / {{ title }}{% endif %}</title>
+    {% if PageLayout.author is not empty %}
+        <meta name="author" content="{{ PageLayout.author }}">
+    {% endif %}
+    {% if PageLayout.description is not empty %}
+        <meta name="description" content="{{ PageLayout.description }}">
+    {% endif %}
+    {% if PageLayout.keyword is not empty %}
+        <meta name="keywords" content="{{ PageLayout.keyword }}">
+    {% endif %}
+    {% if PageLayout.meta_robots is not empty %}
+        <meta name="robots" content="{{ PageLayout.meta_robots }}">
+    {% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% if PageLayout.meta_tags is not empty %}
+        {{ PageLayout.meta_tags|raw }}
+    {% endif %}
+    {% block meta_tags %}{% endblock %}
+    <link rel="icon" href="{{ app.config.front_urlpath }}/img/common/favicon.ico">
 
     <link href="{{ app.config.front_urlpath }}/yasai-bus/css/style.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}" rel="stylesheet"/>
     <link href="{{ app.config.front_urlpath }}/yasai-bus/css/bootstrap.min.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}" rel="stylesheet"/>
 
-{#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/style.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
-{#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/slick.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
-{#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/default.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
-<!-- for original theme CSS -->
-{% block stylesheet %}{% endblock %}
+    {#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/style.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
+    {#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/slick.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
+    {#<link rel="stylesheet" href="{{ app.config.front_urlpath }}/css/default.css?v={{ constant('Eccube\\Common\\Constant::VERSION') }}">#}
+    <!-- for original theme CSS -->
+    {% block stylesheet %}{% endblock %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ app.config.front_urlpath }}/js/vendor/jquery-1.11.3.min.js?v={{ constant('Eccube\\Common\\Constant::VERSION') }}"><\/script>')</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ app.config.front_urlpath }}/js/vendor/jquery-1.11.3.min.js?v={{ constant('Eccube\\Common\\Constant::VERSION') }}"><\/script>')</script>
 
-{# ▼Head COLUMN #}
-{% if PageLayout.Head %}
-    {# ▼上ナビ #}
-    {{ include('block.twig', {'Blocks': PageLayout.Head}) }}
-    {# ▲上ナビ #}
-{% endif %}
-{# ▲Head COLUMN #}
+    {# ▼Head COLUMN #}
+    {% if PageLayout.Head %}
+        {# ▼上ナビ #}
+        {{ include('block.twig', {'Blocks': PageLayout.Head}) }}
+        {# ▲上ナビ #}
+    {% endif %}
+    {# ▲Head COLUMN #}
 
 </head>
 <body id="page_{{ app.request.get('_route') }}" class="{{ body_class|default('other_page') }}">
@@ -75,6 +75,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {{ include('block.twig', {'Blocks': PageLayout.Header}) }}
                 {# ▲上ナビ #}
             {% endif %}
+            {# ▲HeaderInternal COLUMN #}
+            <p id="btn_menu"><a class="nav-trigger" href="#nav">Menu<span></span></a></p>
         </div>
     </header>
 
@@ -88,6 +90,61 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {# ▲上ナビ #}
             {% endif %}
             {# ▲TOP COLUMN #}
+        </div>
+
+        <div class="container-fluid inner">
+            {# ▼LEFT COLUMN #}
+            {% if PageLayout.SideLeft %}
+                <div id="side_left" class="side">
+                    {# ▼左ナビ #}
+                    {{ include('block.twig', {'Blocks': PageLayout.SideLeft}) }}
+                    {# ▲左ナビ #}
+                </div>
+            {% endif %}
+            {# ▲LEFT COLUMN #}
+
+            <div id="main">
+                {# ▼メイン上部 #}
+                {% if PageLayout.MainTop %}
+                    <div id="main_top">
+                        {{ include('block.twig', {'Blocks': PageLayout.MainTop}) }}
+                    </div>
+                {% endif %}
+                {# ▲メイン上部 #}
+
+                <div id="main_middle">
+                    {% block main %}{% endblock %}
+                </div>
+
+                {# ▼メイン下部 #}
+                {% if PageLayout.MainBottom %}
+                    <div id="main_bottom">
+                        {{ include('block.twig', {'Blocks': PageLayout.MainBottom}) }}
+                    </div>
+                {% endif %}
+                {# ▲メイン下部 #}
+            </div>
+
+            {# ▼RIGHT COLUMN #}
+            {% if PageLayout.SideRight %}
+                <div id="side_right" class="side">
+                    {# ▼右ナビ #}
+                    {{ include('block.twig', {'Blocks': PageLayout.SideRight}) }}
+                    {# ▲右ナビ #}
+                </div>
+            {% endif %}
+            {# ▲RIGHT COLUMN #}
+
+            {# ▼BOTTOM COLUMN #}
+            {% if PageLayout.ContentsBottom %}
+                <div id="contents_bottom">
+                    {# ▼下ナビ #}
+                    {{ include('block.twig', {'Blocks': PageLayout.ContentsBottom}) }}
+                    {# ▲下ナビ #}
+                </div>
+            {% endif %}
+            {# ▲BOTTOM COLUMN #}
+
         </div>
 
         <footer id="footer">
@@ -118,17 +175,17 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {#<script src="{{ app.config.front_urlpath }}/js/function.js?v={{ constant('Eccube\\Common\\Constant::VERSION') }}"></script>#}
 {#<script src="{{ app.config.front_urlpath }}/js/eccube.js?v={{ constant('Eccube\\Common\\Constant::VERSION') }}"></script>#}
 <script>
-$(function () {
-    $('#drawer').append($('.drawer_block').clone(true).children());
-    $.ajax({
-        url: '{{ app.config.front_urlpath }}/img/common/svg.html',
-        type: 'GET',
-        dataType: 'html',
-    }).done(function(data){
-        //$('body').prepend(data);
-    }).fail(function(data){
+    $(function () {
+        $('#drawer').append($('.drawer_block').clone(true).children());
+        $.ajax({
+            url: '{{ app.config.front_urlpath }}/img/common/svg.html',
+            type: 'GET',
+            dataType: 'html',
+        }).done(function(data){
+            $('body').prepend(data);
+        }).fail(function(data){
+        });
     });
-});
 </script>
 {% block javascript %}{% endblock %}
 </body>
