--- a/src/Eccube/Resource/template/admin/Customer/edit.twig
+++ b/src/Eccube/Resource/template/admin/Customer/edit.twig
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                         {# 名前(カナ) #}
-                        <div id="detail_box__kana" class="form-group">
+                        <div id="detail_box__kana" class="form-group" style="display: none;">
                             {{ form_label(form.kana) }}
                             <div class="col-sm-9 col-lg-10 input_name form-inline">
                                 {{ form_widget(form.kana.kana01) }}
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         {# FAX番号 #}
-                        <div id="detail_box__fox" class="form-group">
+                        <div id="detail_box__fox" class="form-group" style="display: none;">
                             {{ form_label(form.fax) }}
                             <div class="col-sm-9 col-lg-10 input_tel form-inline">
                                 {{ form_widget(form.fax.fax01) }}-{{ form_widget(form.fax.fax02) }}-{{ form_widget(form.fax.fax03) }}
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                         {# 性別 #}
-                        <div id="detail_box__sex" class="form-group">
+                        <div id="detail_box__sex" class="form-group" style="display: none;">
                             {{ form_label(form.sex) }}
                             <div class="col-sm-9 col-lg-10">
                                 {{ form_widget(form.sex) }}
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                         {# 職業 #}
-                        <div id="detail_box__job" class="form-group">
+                        <div id="detail_box__job" class="form-group" style="display: none;">
                             {{ form_label(form.job) }}
                             <div class="col-sm-9 col-lg-10">
                                 {{ form_widget(form.job) }}
@@ -236,7 +236,7 @@
                             </div>
                         </div>
                         {# 生年月日 #}
-                        <div id="detail_box__birth" class="form-group">
+                        <div id="detail_box__birth" class="form-group" style="display: none;">
                             {{ form_label(form.birth) }}
                             <div class="col-sm-9 col-lg-10">
                                 <div class="form-inline">
