--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -38,9 +38,19 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="margin-left13">{{ form_label(form.name01) }}</label>
-                    {{ form_errors(form.name01) }}
-                    {{ form_widget(form.name01, {'attr': {'class': 'width-full', 'placeholder' : '野菜太郎'}}) }}
+                    <label class="margin-left13">{{ form_label(form.name) }}</label>
+                    <div class="col-sm-12 inline-block" >
+                        <div class="row">
+                        {{ form_errors(form.name.name01) }}
+                        {{ form_errors(form.name.name02) }}
+                        <p class="col-sm-6">
+                        {{ form_widget(form.name.name01) }}
+                        </p>
+                        <p class="col-sm-6">
+                        {{ form_widget(form.name.name02) }}
+                        </p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -54,15 +64,23 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="margin-left13">{{ form_label(form.addr01) }}</label>
-                    {{ form_errors(form.addr01) }}
-                    {{ form_widget(form.addr01, {'attr': {'class': 'width-full', 'placeholder' : '静岡県静岡市青青水区'}}) }}
+                    <label class="margin-left13">{{ form_label(form.address) }}</label>
+                    <div class="col-sm-12">
+                    {{ form_errors(form.address) }}
+                    {{ form_widget(form.address) }}
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="margin-left13">{{ form_label(form.tel01) }}</label>
-                    {{ form_errors(form.tel01) }}
-                    {{ form_widget(form.tel01, {'attr': {'class': 'width-full', 'placeholder': '123456789'}}) }}
+                    <label class="margin-left13">{{ form_label(form.tel) }}</label>
+                    <div class="col-sm-12 inline-block" >
+                        <div class="row">
+                        {{ form_errors(form.tel) }}
+                        <p class="col-sm-4">{{ form_widget(form.tel.tel01) }}</p>
+                        <p class="col-sm-4">{{ form_widget(form.tel.tel02) }}</p>
+                        <p class="col-sm-4">{{ form_widget(form.tel.tel03) }}</p>
+                        </div>
+                    </div>
                 </div>
 
                 {% for emailField in form.email %}
