--- a/src/Eccube/Resource/template/admin/Customer/index.twig
+++ b/src/Eccube/Resource/template/admin/Customer/index.twig
@@ -132,13 +132,22 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                   {{ form_widget(searchForm.customer_status) }}
                 </div>
               </div>
+
+                <div class="col-xs-6 col-md-4">
+                    <div id="search_box_main__approval_status" class="form-group">
+                        <label>{{ searchForm.approval_status.vars.label }}</label>
+                        {{ form_widget(searchForm.approval_status) }}
+                    </div>
+                </div>
+
               <div class="col-xs-6 col-md-4">
                 <div id="search_box_main__sex" class="form-group">
                   <label>性別</label>
                   {{ form_widget(searchForm.sex) }}
                 </div>
               </div>
-              <div class="col-xs-12 col-md-4">
+
+              <div class="col-xs-12 col-md-6">
                 <div id="search_box_main__birth_month" class="form-group">
                   <label>誕生月</label>
                   {{ form_widget(searchForm.birth_month) }}
